[B] Version 1.1.3f[/B]
- flz fix for 18-rated TV3 episodes
- updated AnLar scraper for several channels
- rewrote AerTV (formerly Magnet) plugin for new website

[B]Version 1.1.3e[/B]
- Cleaner logo

[B]Version 1.1.3d[/B]
- Fixed RTE scraper for recent change to RTE website

[B]Version 1.1.3b[/B]
- Fixed TV3 scraper for recent change to TV3 website

[B]Version 1.1.3a[/B]
- Imported nickhx/t0mm0 patch for MagnetWebTV
- Fixed TV3 scraper for recent changes to TV3 website

[B]Version 1.1.3[/B]
- Imported from kitesurfing@kitesurfing.ie google code repos

[B]Version 1.1.1[/B]

- Bug Fixes

[B]Version 1.1.0[/B]

- Bug Fixes
- Added Magnet Web TV support for registered users.

[B]Version 1.0.1[/B]

- Fixed parent folder for Zip Installation

[B]Version 1.0.0[/B]

First release of VODie with version 1.0.0
It includes:
 - RTE Player
 - RTE Live
 - TV3 Player
 - TG4 Player
 - Common Favorite Programs (RTE, TV3 and TG4)
 - Last 10 Recently Browsed Programs