@@ -31,7 +31,7 @@
     <string id="30075">Playing Videos</string>
     <string id="30070">Include Ads</string>
     
-    <string id="30085">Magnet Web TV</string>
+    <string id="30085">AerTV</string>
     <string id="30080">Username</string>
     <string id="30081">Password</string>
     
